Update README with screenshot

--- a/README
+++ b/README
@@ -1,2 +1,3 @@
-OGL Goggles
+## OGL Goggles
 
+![OGL Goggles Screenshot](https://github.com/Pquch/OGLGoggles/blob/main/images/ogl-goggles-2023-01-07.png?raw=true "OGL Goggles Screenshot")
